# makemkv-server

./: Cargo.toml
crates/lib/: Cargo.toml
crates/lib/src/: disc.rs  main.rs  parse.rs  reader.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  logging.rs  main.rs  makemkv.rs  routes.rs  state.rs
crates/server/src/static/: index.html
src/: disc.rs  lib.rs  main.rs  parse.rs  reader.rs
