[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive", "env"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.21", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
