[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib", features = ["serde"] }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
